Add courses register, get user courses and is register check endpoints
